@@ -23,6 +23,7 @@
 #include "modifier/dpad_rotation_modifier.hpp"
 #include "modifier/four_way_restrictor_modifier.hpp"
 #include "modifier/square_axis_modifier.hpp"
+#include "modifier/rotate_axis_modifier.hpp"
 
 Modifier*
 Modifier::from_string(const std::string& name, const std::string& value)
@@ -44,7 +45,7 @@ Modifier::from_string(const std::string& name, const std::string& value)
 
     std::vector<std::string> args(tokens.begin(), tokens.end());
 
-    if (name == "dpad-rotation")
+    if (name == "dpad-rotation" || name == "dpad-rotate")
     {
       return DpadRotationModifier::from_string(args);
     }
@@ -55,6 +56,10 @@ Modifier::from_string(const std::string& name, const std::string& value)
     else if (name == "square" || name == "square-axis")
     {
       return SquareAxisModifier::from_string(args);
+    }
+    else if (name == "rotate")
+    {
+      return RotateAxisModifier::from_string(args);
     }
     else
     {
